--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <a href="sobre.html">SOBRE</a>
         </div>
         <div class="mapouter"><div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=25.3076008,51.4803216&z=16&output=embed"></iframe><a href="https://piratebay-proxys.com/">Piratebay</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
-<div id="cards"></div>
+<div id="cards"> 
+</div>
 
 
         
