--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             <a href="/">PRODUTOS</a>
             <a href="sobre.html">SOBRE</a>
         </div>
-        <h3>Você está acessando o site em:</h3>
         <div class="mapouter">
-            <div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=Subway,%20Nova%20Andradina&t=k&z=13&ie=UTF8&iwloc=&output=embed"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:600px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
+            <h3>Você está acessando o site em:</h3>
+            <div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=Subway,%20Nova%20Andradina&t=k&z=13&ie=UTF8&iwloc=&output=embed"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div>
+        </div>
 <div id="cards"> 
 </div>
 
-
+<footer>Guilherme Tombini e Rafael Albuquerque - INFO 6</footer>
         
         <script src="js/main.js"></script>
     </body>
