finalizado o css da pwa

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>RG SHOP</title>
         <link rel="apple-touch-icon" href="images/pwa-icon-256.png" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
         <link rel="manifest" href="/manifest.json" />
         <!--viewport para designers responsivos (mobo), content é a configuração-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,16 +15,21 @@
 
         <div class="header2">
             <a href="/">PRODUTOS</a>
-            <a href="/pages">SOBRE</a>
+            <a href="sobre.html">SOBRE</a>
         </div>
-        <div class="mapouter">
-            <h3>Você está acessando o site em:</h3>
-            <!-- <button class="botao" id="localizacao">Capturar Localização</button> -->
-            <div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=Subway,%20Nova%20Andradina&t=k&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
-                <!-- <a href="https://www.embedgooglemap.net">embedgooglemap.net</a> -->
-            </div>
-        </div>
-<div id="cards"> 
+       
+
+<div class="conteudo"> 
+
+<h1>Sobre o nosso trabalho:</h1>
+
+
+
+<p class="text">Somos uma loja online do ramo de vendas de periféricos gamers, visando o melhor
+custo benefício para os nossos clientes, nossa loja foi fundada em 2020 
+pelos sócios <b>Rafael Albuquerque</b> e <b>Guilherme Tombini.</b></h3>
+
+
 </div>
 
 <footer class='footer'>
