--- a/index.html
+++ b/index.html
@@ -14,23 +14,21 @@
         <header> RG SHOP</header>
 
         <div class="header2">
-            <a href="/">PRODUTOS</a>
+            <a href="/">PAGINA INICIAL</a>
+            <a href="/pages/produtos.html">PRODUTOS</a>
             <a href="/pages">SOBRE</a>
         </div>
         <div class="mapouter">
             <h3>Você está acessando o site em:</h3>
-            <!-- <button class="botao" id="localizacao">Capturar Localização</button> -->
+            <button class="botao" id="localizacao">Capturar Localização</button>
             <div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=Subway,%20Nova%20Andradina&t=k&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
                 <!-- <a href="https://www.embedgooglemap.net">embedgooglemap.net</a> -->
             </div>
         </div>
-<div id="cards"> 
-</div>
-
 <footer class='footer'>
     <h1>  RGSHOP.COM  </h1>
       </footer>
         
-        <script src="js/main.js"></script>
+        <script src="js/main2.js"></script>
     </body>
 </html>
