--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -4,15 +4,27 @@
         <meta charset="utf-8" />
         <title>RG SHOP</title>
         <link rel="apple-touch-icon" href="images/pwa-icon-256.png" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
         <link rel="manifest" href="/manifest.json" />
         <!--viewport para designers responsivos (mobo), content é a configuração-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="white" />
     </head>
     <body class="fullscreen">
-      <h1>O site está Offline</h1>
+        <header> RG SHOP</header>
+
+        <div class="header2">
+            <a href="/">PAGINA INICIAL</a>
+            <a href="/pages/produtos">PRODUTOS</a>
+            <a href="/pages/index">SOBRE</a>
+        </div>
+<div id="cards"> 
+</div>
+
+<footer class='footer'>
+    <h1>  RGSHOP.COM  </h1>
+      </footer>
         
-        <script src="js/main.js"></script>
+        <script src="../js/main.js"></script>
     </body>
 </html>
