modificado o tamanho das letras e a paginacao

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -15,8 +15,8 @@
 
         <div class="header2">
             <a href="/">PAGINA INICIAL</a>
-            <a href="/pages/produtos">PRODUTOS</a>
-            <a href="/pages/index">SOBRE</a>
+            <a href="/pages/produtos.html">PRODUTOS</a>
+            <a href="/pages/sobre.html">SOBRE</a>
         </div>
        
 
