Adicionado rota sobre

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header2">
             <a href="/">PAGINA INICIAL</a>
             <a href="/pages/produtos.html">PRODUTOS</a>
-            <a href="/pages/index.html">SOBRE</a>
+            <a href="/pages/sobre.html">SOBRE</a>
         </div>
         <div class="mapouter">
             <h3>Você está acessando o site em:</h3>
