--- a/fallback/index.html
+++ b/fallback/index.html
@@ -4,11 +4,101 @@
         <meta charset="utf-8" />
         <title>RG SHOP</title>
         <link rel="apple-touch-icon" href="../images/pwa-icon-256.png" />
-        <link rel="stylesheet" href="../css/style.css" />
-        <link rel="manifest" href="../manifest.json" />
         <!--viewport para designers responsivos (mobo), content é a configuração-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="white" />
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&family=Poppins&family=Source+Sans+Pro&display=swap');
+body {
+    font-family: sans-serif;
+    background-color: #121812;
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    color: white;
+}
+
+html, .fullscreen {
+    display: flex;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+header{
+    background-color: rgb(3, 214, 3);
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 25px;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+}
+
+footer{
+    background-color: rgb(4, 177, 4);
+    width: 100%;
+    height: 40px;
+    display: flex;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+::-webkit-scrollbar{
+    width: 12px;
+    background-color: rgb(99, 98, 98);
+}
+
+::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
+    border-radius: 10px;
+}
+
+.conteudo{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+.text{
+   max-width: 60%;
+   text-align: justify;
+   font-size: 25px;
+   font-family: 'Poppins', sans-serif;
+
+}
+
+.footer{ 
+    position: fixed;
+    left:0;
+    bottom: 0;
+    background-color: #040a0a6b;
+    width: 100%;
+    height: 50px;    
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-family: Trebuchet MS;
+         opacity: 0.7;
+    }
+        </style>
     </head>
     <body class="fullscreen">
         <header> RG SHOP</header>
@@ -29,12 +119,4 @@
       </footer>
         
     </body>
-    <script>
-        window.addEventListener('load', e => {
-    "use strict";//restrito a funcionar em navegadores comES6 >
-    if("serviceWorker" in navigator){
-        navigator.serviceWorker.register("../sw.js");
-    }
-}); 
-    </script>
 </html>
