Adicionado o Bem-vindo na pagina inicial

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <a href="/pages/produtos.html">PRODUTOS</a>
             <a href="/pages/sobre.html">SOBRE</a>
         </div>
+        <div class="bem_vindo">
+            <h1>Bem-vindo ao nosso site!!</h1>
+            <p>Está é a nossa pagina inicial, você pode navegar e encontrar alguns produtos que seja do seu gosto<br><b>Divirta-se!</b></p>
+          </div>
         <div class="mapouter">
             <h3>Você está acessando o site em:</h3>
             <button class="botao" id="localizacao">Capturar Localização</button>
