Arrumado o problema do mapa

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="mapouter">
             <h3>Você está acessando o site em:</h3>
             <button class="botao" id="localizacao">Capturar Localização</button>
-            <div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=Subway,%20Nova%20Andradina&t=k&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+            <div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=25.3076008,51.4803216&z=16&output=embed"></iframe>
                 <!-- <a href="https://www.embedgooglemap.net">embedgooglemap.net</a> -->
             </div>
         </div>
