Adicionado espacamento entre os elementos e o rodape

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="/pages/produtos.html">PRODUTOS</a>
             <a href="/pages/sobre.html">SOBRE</a>
         </div>
+        <div class="container">
         <div class="bem_vindo">
             <h1>Bem-vindo ao nosso site!!</h1>
             <p>Está é a nossa pagina inicial, você pode navegar e encontrar alguns produtos que seja do seu gosto<br><b>Divirta-se!</b></p>
@@ -29,6 +30,8 @@
                 <!-- <a href="https://www.embedgooglemap.net">embedgooglemap.net</a> -->
             </div>
         </div>
+        <div class="espaco"></div>
+    </div>
 <footer class='footer'>
     <h1>  RGSHOP.COM  </h1>
       </footer>
