--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -18,7 +18,12 @@
             <a href="/pages/produtos.html">PRODUTOS</a>
             <a href="/pages/sobre.html">SOBRE</a>
         </div>
+        
+<div class="container">
 <div id="cards"> 
+</div>
+
+<div class="espaco"></div>
 </div>
 
 <footer class='footer'>
